# pinnsight

./: CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
pinnsight/: __init__.py
pinnsight.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pinnsight/backends/: base.py
tests/: test_smoke.py
