[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pinnsight"
version = "0.0.1"
description = "Diagnose why your physics-informed neural network won't train — loss imbalance, gradient conflict, spectral bias, and causality violations — in three lines of code."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
jax = ["jax>=0.4", "jaxlib>=0.4"]
viz = ["plotly>=5.0", "rich>=13.0"]
wandb = ["wandb>=0.15"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/bbbar60-wq/pinnsight"
Repository = "https://github.com/bbbar60-wq/pinnsight"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]